force-app/main/default/objects/Department__c/fields/Abtel__c.field-meta.xml
<CustomField>
    <fullName>Abtel__c</fullName>
    <description>부서</description>
    <label>ABTEI</label>
    <length>12</length>
    <type>Text</type>
</CustomField>