force-app/main/default/objects/Department__c/fields/Bkzer__c.field-meta.xml
<CustomField>
    <fullName>Bkzer__c</fullName>
    <description>실제수익 전기에 대한 잠금지시자</description>
    <label>BKZER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>