force-app/main/default/objects/Department__c/fields/Bkzkp__c.field-meta.xml
<CustomField>
    <fullName>Bkzkp__c</fullName>
    <description>실제 1차 전기에 대한 잠금지시자</description>
    <label>BKZKP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>