force-app/main/default/objects/Department__c/fields/Bkzks__c.field-meta.xml
<CustomField>
    <fullName>Bkzks__c</fullName>
    <description>실제 2차원가요소에 대한 잠금지시자</description>
    <label>BKZKS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>