force-app/main/default/objects/Department__c/fields/Bkzob__c.field-meta.xml
<CustomField>
    <fullName>Bkzob__c</fullName>
    <description>약정사항 갱신에 대한 잠금지시자</description>
    <label>BKZOB</label>
    <length>1</length>
    <type>Text</type>
</CustomField>