force-app/main/default/objects/Department__c/fields/Bukrs__c.field-meta.xml
<CustomField>
    <fullName>Bukrs__c</fullName>
    <description>Company Code</description>
    <label>BUKRS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>