force-app/main/default/objects/Department__c/fields/Datab__c.field-meta.xml
<CustomField>
    <fullName>Datab__c</fullName>
    <description>효력 시작일</description>
    <label>DATAB</label>
    <type>Date</type>
</CustomField>