force-app/main/default/objects/Department__c/fields/DatabI__c.field-meta.xml
<CustomField>
    <fullName>DatabI__c</fullName>
    <description>효력 종료일</description>
    <label>DATBI</label>
    <type>Date</type>
</CustomField>