force-app/main/default/objects/Department__c/fields/EKText__c.field-meta.xml
<CustomField>
    <fullName>EKText__c</fullName>
    <description>일반이름(E)</description>
    <label>EKTEXT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>