force-app/main/default/objects/Department__c/fields/ELText__c.field-meta.xml
<CustomField>
    <fullName>ELText__c</fullName>
    <description>Long 이름(E)</description>
    <label>ELTEXT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>