force-app/main/default/objects/Department__c/fields/FuncArea__c.field-meta.xml
<CustomField>
    <fullName>FuncArea__c</fullName>
    <description>기능 영역</description>
    <label>FUNC_AREA</label>
    <length>16</length>
    <type>Text</type>
</CustomField>