force-app/main/default/objects/Department__c/fields/Gsber__c.field-meta.xml
<CustomField>
    <fullName>Gsber__c</fullName>
    <label>GSBER</label>
    <length>4</length>
    <type>Text</type>
</CustomField>