force-app/main/default/objects/Department__c/fields/Khinr__c.field-meta.xml
<CustomField>
    <fullName>Khinr__c</fullName>
    <description>표준계층구조영역</description>
    <label>KHINR</label>
    <length>12</length>
    <type>Text</type>
</CustomField>