force-app/main/default/objects/Department__c/fields/KKText__c.field-meta.xml
<CustomField>
    <fullName>KKText__c</fullName>
    <description>일반이름(K)</description>
    <label>KKTEXT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>