force-app/main/default/objects/Department__c/fields/KLText__c.field-meta.xml
<CustomField>
    <fullName>KLText__c</fullName>
    <description>Long 이름(K)</description>
    <label>KLTEXT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>