force-app/main/default/objects/Department__c/fields/Kokrs__c.field-meta.xml
<CustomField>
    <fullName>Kokrs__c</fullName>
    <description>관리회계 영역</description>
    <label>KOKRS</label>
    <length>4</length>
    <type>Text</type>
</CustomField>