force-app/main/default/objects/Department__c/fields/Kosar__c.field-meta.xml
<CustomField>
    <fullName>Kosar__c</fullName>
    <description>코스트센터 범주</description>
    <label>KOSAR</label>
    <length>1</length>
    <type>Text</type>
</CustomField>