force-app/main/default/objects/Department__c/fields/Kostl__c.field-meta.xml
<CustomField>
    <fullName>Kostl__c</fullName>
    <description>코스트 센터</description>
    <label>KOSTL</label>
    <length>10</length>
    <type>Text</type>
</CustomField>