force-app/main/default/objects/Department__c/fields/Mgefl__c.field-meta.xml
<CustomField>
    <fullName>Mgefl__c</fullName>
    <description>소비수량을 기록하기 위한 지시자</description>
    <label>MGEFL</label>
    <length>1</length>
    <type>Text</type>
</CustomField>