force-app/main/default/objects/Department__c/fields/Pkzer__c.field-meta.xml
<CustomField>
    <fullName>Pkzer__c</fullName>
    <description>수익계획에 대한 잠금지시자</description>
    <label>PKZER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>