force-app/main/default/objects/Department__c/fields/Pkzkp__c.field-meta.xml
<CustomField>
    <fullName>Pkzkp__c</fullName>
    <description>계획 1차원가요소에 대한 잠금지시자</description>
    <label>PKZKP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>