force-app/main/default/objects/Department__c/fields/Pkzks__c.field-meta.xml
<CustomField>
    <fullName>Pkzks__c</fullName>
    <description>계획 2차원가요소에 대한 잠금지시자</description>
    <label>PKZKS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>