force-app/main/default/objects/Department__c/fields/Prctr__c.field-meta.xml
<CustomField>
    <fullName>Prctr__c</fullName>
    <description>손익 센터</description>
    <label>PRCTR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>