force-app/main/default/objects/Department__c/fields/Txjcd__c.field-meta.xml
<CustomField>
    <fullName>Txjcd__c</fullName>
    <description>조세 관할 구역</description>
    <label>TXJCD</label>
    <length>15</length>
    <type>Text</type>
</CustomField>