force-app/main/default/objects/Department__c/fields/Verak__c.field-meta.xml
<CustomField>
    <fullName>Verak__c</fullName>
    <description>책임자</description>
    <label>VERAK</label>
    <length>20</length>
    <type>Text</type>
</CustomField>