force-app/main/default/objects/Department__c/fields/VerakUser__c.field-meta.xml
<CustomField>
    <fullName>VerakUser__c</fullName>
    <label>VERAK_USER</label>
    <length>12</length>
    <type>Text</type>
</CustomField>