force-app/main/default/objects/Department__c/fields/Waers__c.field-meta.xml
<CustomField>
    <fullName>Waers__c</fullName>
    <label>WAERS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>