force-app/main/default/objects/Department__c/fields/ZZBranch__c.field-meta.xml
<CustomField>
    <fullName>ZZBranch__c</fullName>
    <description>사업장</description>
    <label>ZZBRANCH</label>
    <length>4</length>
    <type>Text</type>
</CustomField>