force-app/main/default/objects/Department__c/fields/ZZCheck__c.field-meta.xml
<CustomField>
    <fullName>ZZCheck__c</fullName>
    <description>손익여부체크지시자</description>
    <label>ZZCHECK</label>
    <length>1</length>
    <type>Text</type>
</CustomField>