force-app/main/default/objects/Department__c/fields/ZZDelete__c.field-meta.xml
<CustomField>
    <fullName>ZZDelete__c</fullName>
    <description>Delete Flag</description>
    <label>ZZDELETE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>