force-app/main/default/objects/Department__c/fields/ZZDummy__c.field-meta.xml
<CustomField>
    <fullName>ZZDummy__c</fullName>
    <description>Dummy Flag</description>
    <label>ZZDUMMY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>