force-app/main/default/objects/Department__c/fields/ZZExpired__c.field-meta.xml
<CustomField>
    <fullName>ZZExpired__c</fullName>
    <description>코스트센터 폐쇄일자</description>
    <label>ZZEXPIRED</label>
    <type>Date</type>
</CustomField>