force-app/main/default/objects/Department__c/fields/ZZPrflg__c.field-meta.xml
<CustomField>
    <fullName>ZZPrflg__c</fullName>
    <description>Update Flag</description>
    <label>ZZPRFLG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>