force-app/main/default/objects/Department__c/fields/ZZSecCode__c.field-meta.xml
<CustomField>
    <fullName>ZZSecCode__c</fullName>
    <description>섹션 코드</description>
    <label>ZZSECCODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>